@@ -1,5 +1,9 @@
 2014-07-28  Eli Zaretskii  <eliz@gnu.org>
 
+	* xdisp.c (display_line): If called with iterator set up to write
+	to a marginal area, delay the call to handle_line_prefix until we
+	switch back to the text area.  (Bug#18035)
+
 	* .gdbinit (xwindow): The members total_cols, total_lines,
 	left_col, and top_line are C integers (and has been so for the
 	last 1.5 years).
